@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: command.c,v 1.191 2010/02/03 09:55:44 mikulik Exp $"); }
+static char *RCSid() { return RCSid("$Id: command.c,v 1.192 2010/02/24 20:38:08 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - command.c */
@@ -1150,7 +1150,8 @@ pause_command()
 	    } else {
 #  if defined(WGP_CONSOLE)
 		fprintf(stderr,"%s\n", buf);
-		while (term->waitforinput() != (int)'\r') {}; /* waiting for Enter*/
+		if (term && term->waitforinput)
+		  while (term->waitforinput() != (int)'\r') {}; /* waiting for Enter*/
 #  else /* !WGP_CONSOLE */
 		if (!Pause(buf)) 
 		bail_to_command_line();
@@ -1170,7 +1171,8 @@ pause_command()
 		if (!tmp) {
 #  if defined(WGP_CONSOLE)
 		    fprintf(stderr,"%s\n", buf);
-		    while (term->waitforinput() != (int)'\r') {}; /* waiting for Enter*/
+			if (term && term->waitforinput)
+		      while (term->waitforinput() != (int)'\r') {}; /* waiting for Enter*/
 #  else
 		    if (!Pause(buf)) 
 		       bail_to_command_line();
