@@ -1,3 +1,8 @@
+2010-02-24  Alexander Taschner  <tachna@users.sourceforge.net>
+
+	* src/command.c src/win/wgraph.c term/win.trm:  Move declarations to
+	conform with ANSI C.
+
 2010-02-24  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/cgm.trm (find_nearest_color):  When looking for RGB colors, check
